--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div class="main">
 				<h1 class="main-title">Say <span>Ciao</span> to Our Portfolio</h1>				
 			</div>
-			<div class="box-shadow"></div>
+			<div class="box-shadow" onclick=""></div>
 			<header class="header">
 				<div class="container-header">
 					<a class="logo" href="#">
